force-app/main/default/objects/VRT_InvoiceNotificationEvent__e/VRT_InvoiceNotificationEvent__e.object-meta.xml
<CustomObject>
    <label>Invoice Notification Event</label>
    <pluralLabel>Invoice Notification Events</pluralLabel>
</CustomObject>