force-app/main/default/objects/VRT_InvoiceNotificationEvent__e/fields/VRT_AccountEmail__c.field-meta.xml
<CustomField>
    <fullName>VRT_AccountEmail__c</fullName>
    <label>Account Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>