force-app/main/default/objects/VRT_InvoiceNotificationEvent__e/fields/VRT_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>VRT_Invoice_Id__c</fullName>
    <label>Invoice Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>