force-app/main/default/objects/VRT_InvoiceNotificationEvent__e/fields/VRT_Message__c.field-meta.xml
<CustomField>
    <fullName>VRT_Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>