force-app/main/default/objects/VRT_InvoiceNotificationEvent__e/fields/VRT_RentalId__c.field-meta.xml
<CustomField>
    <fullName>VRT_RentalId__c</fullName>
    <label>Rental Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>